--- a/public/styles.css
+++ b/public/styles.css
@@ -103,6 +103,7 @@ red{
 
 .headerBoxText{
     margin-top: 0;
+    padding: 2px;
 }
 
 .flexBox{
@@ -355,6 +356,32 @@ red{
     width: 90vw
 }
 
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Tooltip text */
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+   
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
+
 
 /*Styling by ID*/
 
@@ -415,8 +442,8 @@ red{
 #headerImage{
     position: absolute;
     height: 20px;
-    margin-left: 50px;
-    margin-top: 23px;
+    margin-left: 65px;
+    margin-top: 25px;
 }
 
 #innerFlex{
