--- a/public/styles.css
+++ b/public/styles.css
@@ -122,7 +122,7 @@ red{
     justify-content: center;
     align-items: center;
     position: relative;
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: hidden;
     border: rgb(19, 0, 128) solid 2px;
     border-radius: 30px;
