--- a/public/styles.css
+++ b/public/styles.css
@@ -427,18 +427,12 @@ red{
     text-shadow: 2px 3px rgba(0,0,0,0.5);
 }
 
-#description{
+.description{
     font-size: larger;
     font-weight: bold;
     margin-bottom: 0;
 }
 
-#description2{
-    margin: 5px;
-    font-weight: bold;
-    text-shadow: 1px 2px rgba(0,0,0,0.5);
-    color:aliceblue;
-}
 
 #headerImage{
     position: absolute;
