--- a/public/styles.css
+++ b/public/styles.css
@@ -568,4 +568,17 @@ red{
     width: 40vw;
     margin: 0 auto;
     font-family: "Righteous";
+    font-size: 16pt;
+}
+
+.fade-in {
+    opacity: 0;
+    animation: fadeIn 2.5s forwards;
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+        height: auto;
+    }
 }
