added web app section

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -48,6 +48,8 @@ li {
 .flexbox {
     display: flex;
     flex-direction: column;    
+    align-items: center;
+    justify-content: center;
 }
 
 .hFlexBox {
