--- a/public/styles/experience.css
+++ b/public/styles/experience.css
@@ -7,13 +7,18 @@
     border: rgb(0,210,247) 2px  solid;
     height: fit-content;
     border-radius: 50px;
-    width: 450px;
+
     margin: 20px;
     padding: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    transition: all 1s;
+}
+
+.experienceBox:hover {
+    transform: scale(105%);
 }
 
 .experienceImage {
