added projects page --- more work to come

--- a/public/styles/projects.css
+++ b/public/styles/projects.css
@@ -19,12 +19,19 @@
     overflow: hidden;
     border-radius: 20px;
     background: rgb(0,0,10);
+
+    
 }
 
 #projectSection {
     height: fit-content;
     width: 80vw;
     margin-left: 10vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .projectImage {
