--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -26,7 +26,22 @@ li {
     font-size: 10pt;
 }
 
+a {
+    color: rgb(202, 233, 255);
+    transition: all 0.5s;
+}
 
+a:hover {
+    color:#00d2f7;
+}
+
+a:visited:hover {
+    color:#00d2f7;
+}
+
+a:visited {
+    color: #c191f7
+}
 
 .smallhr {
     width: 60vw;
@@ -47,6 +62,12 @@ li {
     margin-right: 30px;
 }
 
+.tinyLabel {
+    text-align: center;
+    font-size: 10pt;
+    margin: 10px;
+}
+
 .flexbox {
     display: flex;
     flex-direction: column;    
@@ -58,6 +79,7 @@ li {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     padding: 20px;
     flex-wrap: wrap;
 }
@@ -149,6 +171,7 @@ li {
     justify-content: center;
     align-items: center;
     transition: all 0.5s;
+    z-index: 5;
 }
 
 .homeButton:hover{
