--- a/public/styles/projectPage.css
+++ b/public/styles/projectPage.css
@@ -12,27 +12,27 @@
     align-items: center;
     overflow: hidden;
     background-color: rgb(0,0,10);
-    transition: all 0.7s;
-    position:static;
+    transition: all 1s;
+   
 
 }
 
 .projPageBoxFlex {
     flex-wrap: nowrap;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .projPageBox:hover {
-    height: 500px;
-    min-width: 800px;
-    margin: 0px;
+    height: fit-content;
+    min-width: 700px;
+    position: static;
 }
 
 .projPageBoxImg {
     height:300px;
-    opacity: 0.3;
+    opacity: 0.5;
     position: relative;
-    transition: all 0.3s;
+    transition: all 1s;
     border-radius: 30px;
 }
 
@@ -40,6 +40,7 @@
     opacity: 1;
     height: 250px;
     margin: 20px;
+    display: none;
 }
 
 .projPageBoxLabel {
@@ -47,11 +48,19 @@
     transition: all 0.3s;
     color: rgb(0,210,247);
     margin: 20px;
+    z-index: 3;
+    width: 80px;
+    text-align: center;
+    background-color: rgba(0,0,10,0.5);
+    padding: 10px;
+    border-radius: 10px;
+    
 }
 
 .projPageBox:hover .projPageBoxLabel{
     position: relative;
     font-size: 22pt;
+    width: auto;
 }
 
 .projPageImgContainer {
@@ -59,11 +68,14 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    transition: all 0.3s;
+    transition: all 1s;
+    max-width: 300px;
 }
 
 .projPageBox:hover .projPageImgContainer{
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .projPageTechImg {
@@ -73,7 +85,10 @@
 }
 
 .projPageDescription {
-    display: none;
+    width: 0;
+    overflow: hidden;
+    position: absolute;
+    text-align: center;
 }
 
 .projPageDescriptionText {
@@ -85,6 +100,20 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 300px;
+    position: relative;
+    opacity: 1;
+}
+
+.projPage.galleryContainer {
+    display: none;
+}
+
+.projPageBox:hover .projPage.galleryContainer {
+    display: block;
+}
+
+.projPageImageGalleryGif {
     width: 300px;
 }
 
